--- a/设计说明.md
+++ b/设计说明.md
@@ -37,3 +37,321 @@ IP服务器重新做了设计, 关于上线设备的记录,使用socket作为key
 ### 客户端设计
 
 现在要求客户端发送心跳包, 同时客户端也必须在每次接收到报文的时候完全更新设备列表.
+
+
+
+客户端之间互相连接的逻辑:
+
+每个客户端都同时具备一个server和client, 它们都会首先开启一个服务器, 对于对方的选择有两种方式,其中一种是点击选择, 另外一种是接收到了对方的连接.
+
+服务器只负责发送, 客户端只负责接收
+
+我明白这种方式实际上会产生问题, 并且现在是仅支持两两之间的交流,所以肯定会有几率产生问题, 但是现在先不管这个问题了.
+
+
+
+
+
+### Qt客户端设计说明
+
+我决定重新设计代码.
+
+将每个部分分解,重新设计信号和槽,以及工作机理.
+
+因此这个项目可以分为四个部分:
+
+~~~
+界面
+IP_Handler
+TCP_Server
+TCP_Client
+~~~
+
+关于TCP是全双工的等等,我就不修改原始设计了.
+
+界面处在主线程, 其余每个部件分别放进一个线程.
+
+~~~
+IP_Handler
+
+signal:
+汇报接收到的设备数据
+
+slots:
+启动与重启(同时要设置服务器信息(服务器端口和IP))
+设置报告延时信息
+设置设备ID信息
+下线
+~~~
+
+~~~
+TCP_Server
+signal:
+发送server或者连接到当前服务器的客户端的信息(IP, Port)
+发送信息发送进度
+
+slots:
+接收要发送的数据
+重新启动
+~~~
+
+~~~
+TCP_Client
+
+signal:
+发送接收到的进度或者数据
+发送连接成功的信息
+
+slots:
+启动(接收要连接的客户端的信息)
+下线
+接受设置信息
+~~~
+
+
+
+我决定将部件之间的信息交流统一定义为相同的数据结构:
+
+~~~c++
+enum INFO_TYPE {DEVICE, TEXT, AFILE, PROGRESS, SETTING};
+// FILE似乎是被Qt用了
+struct INFO
+{
+    QString content;
+    INFO_TYPE info_type;
+};
+~~~
+
+所有的信息都使用字符串表示, 然后使用类型来标志信息类别, 不同的信息类别有不同的字符串结构和解析方式.
+
+~~~
+设备信息格式:
+ID\nport\nIP\n\nID\nport\nIP\n\n
+~~~
+
+对于IP_Handler来说, 如果是在设置自己的设备信息, ID字段是空的, 如果是在接收自己的Sevrer信息的时候这个字段是非空的
+
+如果任意一个字段缺失应该设置为`,`
+
+
+
+
+
+IP_handler:
+
+来自主界面的设备ID信息, 来自主界面的报告时延信息, 来自主界面的服务器IP信息和端口信息(此时IP_handler必须重启)(启动重启与此信息合并), 以及来自TCP_server的本设备端口信息, 来自主界面的下线信息
+
+向主界面发送 接收到的在线设备的信息
+
+
+
+TCP_Server
+
+向IP_handler发送自己的端口信息 向主界面发送进度信息, 向主界面发送客户端IP信息
+
+接收主界面的启动信息(包含发送时延), 接收主界面要发送的信息(AFILE  TEXT)
+
+接受主界面的设置信息(发送时延) 接收主界面的下线信息
+
+
+
+TCP_Client
+
+接受来自主界面的对方服务的IP和端口信息(相当于重启)   接受来自主界面的目录设置信息(AFILE) 来自主界面的下线信息
+
+向主界面发送接收到的文件或数据
+
+向主界面发送进度信息
+
+向主界面发送连接成功信息
+
+
+
+Window
+
+设置各个界面
+
+调出主界面
+
+配置各个按钮的功能
+
+启动IP_Handler, 发送设置信息
+
+启动TCP_Server, 发送设置信息
+
+连接 IP_Handler和TCP_server
+
+接收的信息:
+
+来自IP_Handler的在线设备信息, 来自TCP_Server的进度信息, 来自TCP_Server的客户端IP信息
+
+来自TCP_client的接收到的文件或数据  来自TCP_client的进度信息  来自TCP_Client的连接成功信息
+
+发送的信息:
+
+to IP_Handler  本设备ID  报告时延  服务器IP与端口与启动  下线
+
+to TCP_server  发送时延与启动 发送时延 要发送的文件或消息 下线
+
+to TCP_client  对方IP与端口(启动) 存储目录设置 下线
+
+
+
+细节调整:
+
+当两个设备之间建立通信之后, 应该让IP_Handler下线, 所以,需要修改上述设计, 单独为IP_Handler设计一个下线信号
+
+
+
+
+
+Window方法表
+
+~~~c++
+void Window::get_progress(int percent);
+void Window::parse_info(INFO info);
+void choose_device(QListWidgetItem* it);
+Device_info Window::find_partner(QString data, QString data_type);
+void Window::parser_device_info(QString data);
+void Window::make_client(Device_info a);
+void Window::client_connect_to_server();
+void Window::show_config_page();
+void Window::show_about_page();
+void Window::show_devices_page();
+void Window::show_commu_page();
+void Window::change_conf();
+void Window::read_conf();
+void Window::paintEvent(QPaintEvent *);
+void Window::mousePressEvent(QMouseEvent *e);
+void Window::mouseReleaseEvent(QMouseEvent *e);
+void Window::mouseMoveEvent(QMouseEvent *e);
+void Window::set_area(QRect a);
+void Window::dragEnterEvent(QDragEnterEvent *e);
+void Window::dropEvent(QDropEvent *e);
+void Window::return_from_about_page();
+void Window::send_message_or_file();
+void Window::choose_file();
+void Window::choose_dir();
+void Window::restart();
+
+    
+~~~
+
+~~~c++
+
+void choose_device(QListWidgetItem* it);   //在设备选择列表中点击项目将触发这个槽函数
+void parse_info(INFO info);
+void get_progress(int percent);
+void client_connect_to_server();
+void send_off_line();
+void send_iphandler_offline();
+
+void send_iphandler_id(INFO info);
+void send_iphandler_report_delay(INFO delay_info);
+void send_iphandler_start(INFO info);
+
+void send_tcpserver_start(INFO info);
+void send_tcpserver_send_delay(INFO info);
+void send_tcpserver_data(INFO info);
+
+void send_tcpclient_start(INFO info);
+void send_tcpclient_dir(INFO info);
+
+
+void show_config_page();     //显示 设置     界面
+void show_about_page();      //显示 关于     界面
+void show_devices_page();    //显示 设备列表 界面
+void show_commu_page();      //显示 通讯     界面
+
+void change_conf();   //修改配置
+void read_conf();    //读取配置
+
+void paintEvent(QPaintEvent *);
+void mousePressEvent(QMouseEvent *e);     //以下三个均为鼠标拖动窗口服务
+void mouseReleaseEvent(QMouseEvent *e);
+void mouseMoveEvent(QMouseEvent *e);
+void set_area(QRect a);   //用于实现自定义窗口拖动
+
+void dragEnterEvent(QDragEnterEvent *e);   //拖拽文件的服务函数
+void dropEvent(QDropEvent *e);
+
+
+Device_info find_partner(QString data, QString data_type);
+
+void make_client(Device_info a);
+
+void parser_device_info(QString data);
+
+void return_from_about_page();
+void choose_send_file();
+void choose_storage_dir();
+
+void restart();
+
+void Window::send_message_or_file()
+~~~
+
+
+
+调整:
+
+需要让IP_Handler持续汇报, 但是如果写了循环就无法再触发其它的事件, 而且我测试也无法将一个Timer放进IP_Hanlder的线程里面, 所以, 需要在window里面设计一个定时器, 然后让它定时通知IP_handler进行汇报.
+
+
+
+
+
+
+
+可供使用的函数表:
+
+IP_Handler
+
+~~~c++
+~IP_Handler();  //销毁
+
+
+void send_online_devices_info(INFO devices_info);  //发送在线设备信息
+void send_report_success();    //报告汇报成功
+void send_connect_ipserver_success();   //报告连接ip服务器成功
+
+void start(INFO server_info);   //接收启动要求 下线已有socket, 启动新的 需要ip_server的ip和port
+void parse_info(INFO get_info);  //接收自己的ID tcp_server的port
+void off_line(); //接收下线要求 报告下线,并关闭socket
+void report();  //接收汇报一次请求
+
+~~~
+
+TCP_Server
+
+~~~c++
+~Server();   //销毁
+
+void send_info(INFO device_info);   //发送自己的port信息和前来连接的client的IP信息
+void send_progress(int percent);   //发送文件发送进度
+
+
+void start(INFO setting_info);  //接收启动要求 下线, 开启新的socket  需要发送时延
+
+void off_line();   //接受下线要求,关闭全部已有的socket
+
+void parser_info(INFO setting_info);  //接收发送时延设置
+
+void get_data(INFO data_info);       //接受要发送的数据
+
+~~~
+
+TCP_Client
+
+~~~c++
+~Client();  //销毁
+
+void send_connect_success();        //发送连接对方服务器成功信号
+void send_recv_data(INFO recv_data);   //发送收到的数据
+void send_progress(int percent);    //发送进度
+
+void start(INFO device_info);     //接收启动请求, 下线原有服务, 重新启动 需要ip和port
+void parse_info(INFO info);     //接收目录设置
+void off_line();   //接受下线要求
+~~~
+
